# artifactory_to_nexus_migration

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: artifactory.py  config.py  filters.py  main.py  nexus.py  util.py  version.py
tests/: test_util.py  test_version.py
